# tic-tac-toe-tales

./: Cargo.toml  README.md
assets/editor/models/: basic_block.glb
assets/editor/shaders/: area_highlighter_shader.wgsl  block_highlighter_shader.wgsl
assets/game/shaders/: blocks_shader.wgsl  shader_utils.wgsl
src/: main.rs
src/data/: blocks.rs  chunk.rs  materials.rs  registry.rs  world.rs
src/data/editor/: block_highlighter.rs  materials.rs  world_editing.rs
src/data/game/: blocks.rs  chunk.rs  materials.rs
